<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wifi Muscles</string>

    <!-- Bottom Navigation Strings -->
    <string name="donate_txt">Donate</string>
    <string name="share_txt">Share</string>
    <string name="stats_txt">Stats</string>
    <string name="bar_txt">Bar</string>
    <string name="chart_txt">Chart</string>
    <string name="support">Support</string>

    <!-- Top Navigation String -->
    <string name="menu">Menu</string>

    <!-- RSSI String Level UI Labels -->
    <string name="wifi_strength">Wifi Strength</string>
    <string name="rssi">RSSI</string>
    <string name="leve_excellent">Excellent</string>
    <string name="level_good">Good</string>
    <string name="level_fair">Fair</string>
    <string name="level_weak">Weak</string>
    <string name="level_unusable">Unusable</string>

    <!-- Buttons -->
    <string name="switch_chart">Switch Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="bar_chart">Bar Chart</string>

    <!-- Emoji Labels -->
    <string name="rssi_emoji_txt">RSSI Emoji Levels</string>
    <string name="emoji">Emoji</string>

    <!-- Icon Labels -->
    <string name="wifi_icon">Wifi Icon</string>
    <string name="band_icon">Band Icon</string>
    <string name="menu_icon">menu_icon</string>

    <!-- Headers -->
    <string name="wifi_overview">WiFi Overview</string>
    <string name="connection_info">Connection Info</string>
    <string name="advanced_info">Advanced Stats</string>
    <string name="speed_test_throughput">Throughput</string>
    <string name="wi_fi_signal">Wi-Fi Signal</string>
    <string name="network_info">Network Info</string>
    <string name="network_stats">Network Stats</string>
    <string name="connectivity_status">Connectivity Status</string>
    <string name="dhcp_info">DHCP Info</string>
    <string name="throughput">Throughput</string>
    <string name="description_subHeader">Tap an item for a description.</string>

    <!-- WiFi Stats Labels -->
    <string name="capability">- Capability: %s</string>
    <string name="center_freq_0">- Center Freq 0: %1$d</string>
    <string name="center_freq_1">- Center Freq 1: %1$d</string>
    <string name="channel_width">- Channel Width: %1$d</string>
    <string name="dns">DNS</string>
    <string name="dns1">- DNS1 %1$s</string>
    <string name="dns2">- DNS2 %1$s</string>
    <string name="downstream">Downstream</string>
    <string name="downstream_s">- Downstream: %1$s</string>
    <string name="gateway">- Gateway: %1$s</string>
    <string name="ghz">GHz</string>
    <string name="interference">- Interference: %1$d</string>
    <string name="internet">- Internet: %1$s</string>
    <string name="ip_address">IP: %1$s</string>
    <string name="lease_duration">- Lease Duration %1$s</string>
    <string name="link_speed">Link Speed: %1$d</string>
    <string name="mac">MAC</string>
    <string name="max_speed">Max Speed</string>
    <string name="metered">- Metered: %1$s</string>
    <string name="mhz">MHz</string>
    <string name="netmask">- Netmask: %1$s</string>
    <string name="no_data">No Data</string>
    <string name="nothing">-</string>
    <string name="passpoint">- Passpoint: %1$s</string>
    <string name="responder">- 802.11mc: %1$s</string>
    <string name="rssi_dBm_txt">-00 dBm</string>
    <string name="rssi_display">RSSI: %1$d dBm</string>
    <string name="server_address">Server Address</string>
    <string name="ssid">SSID</string>
    <string name="strength_level">- Wi-Fi Level: %1$d</string>
    <string name="transport">- Transport: %1$s</string>
    <string name="tx">tx</string>
    <string name="upstream">- Upstream: %1$s</string>
    <string name="validation">- Validation: %1$s</string>

    <!-- Boolean -->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="label_blank">""</string>

    <!-- Popup Text -->
    <string name="wifi_signal_popup">This WiFi level is rated on a 1 through 5 scale illustrating the strength of your device to the router. Higher values mean better connectivity (e.g., 5 is best and 1 is weakest). The scale is based off of the RSSI level reading from your connected device.
    </string>

    <string name="capability_popup_txt">Shows the supported Wi-Fi capabilities such as WPA/WPA2, PSK, etc.
    </string>

    <string name="channel_width_txt">Channel width in Wi-Fi refers to the amount of frequency spectrum (measured in MHz) used to transmit data. It determines how much data can be sent at once — think of it like the width of a highway: the wider it is, the more cars (data) it can handle simultaneously./ Higher width means more speed, but also more interference and less compatibility. Lower width is more stable, especially in crowded environments or with older devices.
    </string>

    <string name="center_freq_0_txt">This is the primary frequency (in MHz) used by your Wi-Fi connection. It helps identify which channel your device is using to send and receive data. For example, 2412 MHz corresponds to Wi-Fi Channel 1 in the 2.4 GHz band.
    </string>

    <string name="center_freq_1_txt">This is the secondary frequency used in wide-channel configurations like 40, 80, or 160 MHz. It helps Wi-Fi devices achieve faster speeds by bonding multiple channels together.
    </string>

    <string name="passpoint_txt">Passpoint is a Wi-Fi standard that allows devices to automatically and securely connect to participating public Wi-Fi networks—like those in airports, hotels, and cafes—without needing to manually log in. It provides seamless, encrypted, and trusted connections—similar to cellular roaming.
    </string>

    <string name="responder_txt">802.11mc is a Wi-Fi standard also known as Wi-Fi Round Trip Time (RTT). It allows devices to measure the distance to nearby Wi-Fi access points using precise timing.
    </string>

    <string name="downstream_txt">This is the rate at which data is downloaded from the network to your device. A higher downstream speed means faster loading times for videos, files, and web pages.
    </string>

    <string name="upstream_txt">This is the rate at which data is uploaded from your device to the network. Faster upstream speeds help improve file uploads, video calls, and live streaming.
    </string>

    <string name="gateway_txt">The gateway is the IP address of the router your device uses to connect to the internet or other networks. It acts as the entry and exit point for network traffic outside your local network.
    </string>

    <string name="netmask_txt">The netmask defines your local network’s size by specifying which part of the IP address identifies the network and which part identifies devices within it. It helps your device determine if another IP is local or needs to go through the gateway.
    </string>

    <string name="dns1_txt">This is the main server your device contacts to translate website names into IP addresses. It helps your device find websites and services on the internet quickly.
    </string>

    <string name="dns2_txt">This is the backup DNS server your device uses if the primary DNS server is unavailable, ensuring continued access to domain name resolution.
    </string>

    <string name="lease_txt">The time period your device is allowed to use its current IP address assigned by the network’s DHCP server before it needs to renew or request a new one.
    </string>

    <string name="transport_txt">The type of network connection your device is currently using, such as Wi-Fi, Cellular, or Ethernet.
    </string>

    <string name="internet_txt">Indicates if your device currently has access to the internet through the connected network.
    </string>

    <string name="validated_txt">Indicates whether the device’s network connection has been confirmed to provide internet access by successfully reaching external servers.
    </string>

    <string name="metered_txt">Shows if the current network connection has data limits or usage charges, which may restrict background data to save on costs.
    </string>

    <string name="interference_txt">The interference value is an estimated representation of how many nearby Wi-Fi networks are operating on frequencies close to your current Wi-Fi connection, which could cause signal interference and affect performance.
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>